# risk-mapping

./: .gitignore  =1.0  CLAUDE.md  Makefile  README.md  prd.md  pyproject.toml  requirements.txt  todo.md
.claude/agents/: data-inspector.md  pipeline-runner.md  validate-output.md
data/: pre_event_surveys.csv  pre_event_surveys.survey_list.txt  test_pre_event_surveys.csv  test_pre_event_surveys.survey_list.txt  test_survey_catalog.csv
data/test_data/: test_survey_catalog.csv
docs/: pipeline_data_guide.md  prd.md  todo.md  training_pipeline_outline.md
models/: delmar_stability_rf.joblib  delmar_stability_rf.json  rf_model.json  rf_model_stratified.json  rf_model_temporal.json
paper/words/: bib_dois.md  risk-mapping.tex
pc_rai/: __init__.py  __main__.py  classifier.py  cli.py  config.py
pc_rai/classification/: __init__.py  decision_tree.py  energy.py  pca_classifier.py
pc_rai/features/: __init__.py  roughness.py  slope.py
pc_rai/io/: __init__.py  las_reader.py  las_writer.py
pc_rai/ml/: __init__.py  ablation.py  config.py  data_prep.py  feature_extraction.py  features.py  labels.py  polygon_aggregation.py  polygons.py  survey_selection.py  temporal.py  train.py  training_data.py
pc_rai/normals/: __init__.py  cloudcompare.py  normals_from_list.py
pc_rai/reporting/: __init__.py  report_writer.py  statistics.py
pc_rai/utils/: __init__.py  spatial.py
pc_rai/visualization/: __init__.py  figures.py  panels.py  render_3d.py  risk_map.py
scripts/: 01_identify_surveys.py  02_extract_features.py  03_aggregate_polygons.py  04_assemble_training_data.py  05_train_model.py  06_ablation_study.py  07_predict_risk.py  07b_interactive_map.py  compute_features.py  compute_normals_mst.py  create_publication_figure.py  create_workflow_diagram.py  generate_test_data.py  plot_decision_tree.py  plot_training_results.py  prepare_delmar_training.py  prepare_delmar_training_temporal.py  regenerate_pre_event_surveys.sh  risk_map_regional.py  setup_linux_env.sh  subsample_all.py  validate_labels.py  visualize_training_results.py
tests/: __init__.py  conftest.py  test_ablation.py  test_classification.py  test_classifier.py  test_cli.py  test_cloudcompare.py  test_config.py  test_data_prep.py  test_energy.py  test_feature_extraction.py  test_figures.py  test_integration.py  test_las_reader.py  test_las_writer.py  test_ml_config.py  test_pca_classifier.py  test_polygon_aggregation.py  test_polygon_features_output.py  test_polygon_indexing.py  test_polygons.py  test_reporting.py  test_roughness.py  test_slope.py  test_spatial.py  test_survey_selection.py  test_train.py  test_training_data.py  test_visualization.py
utiliies/csvs/: DelMar_events_sig.csv
utiliies/events/: Blacks_events_qc_20260204_002208.csv  Encinitas_events_qc_20260204_092702.csv  SanElijo_events_qc_20260204_004840.csv
utiliies/events/old/: Encinitas_events_sig.csv  SanElijo_events_sig.csv  Solana_events_sig.csv  Torrey_events_sig.csv
utiliies/events/qc_ed/: DelMar_events_qc_20260203_085647.csv  Solana_events_qc_20260204_011549.csv  Torrey_events_qc_20260204_092322.csv
utiliies/events/raw/: Blacks_events.csv  DelMar_events.csv  Encinitas_events.csv  SanElijo_events.csv  Solana_events.csv  Torrey_events.csv
utiliies/file_lists/: all_noveg_files.csv
utiliies/polygons_1m/BlacksPolygons520to567at1m/: BlacksPolygons520to567at1m.shp  BlacksPolygons520to567at1m.shx
utiliies/polygons_1m/DelMarPolygons595to620at1m/: DelMarPolygons595to620at1m.dbf  DelMarPolygons595to620at1m.sbn  DelMarPolygons595to620at1m.sbx  DelMarPolygons595to620at1m.shp  DelMarPolygons595to620at1m.shp.xml  DelMarPolygons595to620at1m.shx
utiliies/polygons_1m/EncinitasPolygons708to764at1m/: EncinitasPolygons708to764at1m.shp  EncinitasPolygons708to764at1m.shx
utiliies/polygons_1m/SanElijoPolygons683to708at1m/: SanElijoPolygons683to708at1m.dbf  SanElijoPolygons683to708at1m.shp  SanElijoPolygons683to708at1m.shx
utiliies/polygons_1m/SolanaPolygons637to666at1m/: SolanaPolygons637to666at1m.dbf  SolanaPolygons637to666at1m.shp  SolanaPolygons637to666at1m.shx
utiliies/polygons_1m/TorreyPolygons567to581at1m/: TorreyPolygons567to581at1m.dbf  TorreyPolygons567to581at1m.sbn  TorreyPolygons567to581at1m.sbx  TorreyPolygons567to581at1m.shp  TorreyPolygons567to581at1m.shx
utiliies/transects_10m/: baseline_points.dbf  baseline_points.shp  baseline_points.shx  transect_lines.dbf  transect_lines.shp  transect_lines.shx
utiliies/transects_1m/Blacks_1m/: baseline_points.dbf  baseline_points.shp  baseline_points.shx  transect_lines.dbf  transect_lines.shp  transect_lines.shx
utiliies/transects_1m/DelMar_1m/: baseline_points.dbf  baseline_points.shp  baseline_points.shx  transect_lines.dbf  transect_lines.shp  transect_lines.shx
utiliies/transects_1m/Encinitas_1m/: baseline_points.dbf  baseline_points.shp  baseline_points.shx  transect_lines.dbf  transect_lines.shp  transect_lines.shx
utiliies/transects_1m/SanElijo_1m/: baseline_points.dbf  baseline_points.shp  baseline_points.shx  (+3 more)
(+15 files in other folders)
